# merlion_sauvc

./: README.md  bag_record
merlion_bringup/: CMakeLists.txt  README.md  package.xml
merlion_bringup/launch/: apm.launch  apm_pluginlists.yaml  astra_rgb.launch  camera1.launch  camera2.launch  competition.launch  control.launch  control_bringup.launch  estop.launch  image_view.launch  joy.launch  logi_c310.launch  logi_c920.launch  logitech_cam.launch  merlion_bringup.launch  mission_planner.launch  perception_bringup.launch  qualification.launch  qualification1.launch  sensors.launch  sensors_bringup.launch  twincam_1.launch  twincam_2.launch
merlion_bringup/launch/sensors/: arduino.launch  astra_rgb.launch  logi_c310.launch  logi_c920.launch
merlion_control/: CMakeLists.txt  package.xml
merlion_control/arduino/draft/: draft.ino
merlion_control/arduino/estop_controller/: estop_controller.ino
merlion_control/arduino/estop_deprecated/: estop_DEPRECATED.ino
merlion_control/arduino/estop_v2/: estop_v2.ino
merlion_control/arduino/libraries/ros_lib/jsk_gui_msgs/: Action.h  AndroidSensor.h  DeviceSensor.h  Gravity.h  MagneticField.h  MultiTouch.h  SlackMessage.h  Tablet.h  Touch.h  TouchEvent.h  VoiceMessage.h
merlion_control/arduino/libraries/ros_lib/jsk_hark_msgs/: HarkPower.h
merlion_control/arduino/libraries/ros_lib/jsk_interactive_marker/: GetJointState.h  GetMarkerDimensions.h  GetTransformableMarkerColor.h  GetTransformableMarkerExistence.h  GetTransformableMarkerFocus.h  GetTransformableMarkerPose.h  GetType.h  IndexRequest.h  JointTrajectoryPointWithType.h  JointTrajectoryWithType.h  MarkerDimensions.h  MarkerMenu.h  MarkerPose.h  MarkerSetPose.h  MoveModel.h  MoveObject.h  PoseStampedWithName.h  RemoveParentMarker.h  SetHeuristic.h  SetMarkerDimensions.h  SetParentMarker.h  SetPose.h  SetTransformableMarkerColor.h  SetTransformableMarkerFocus.h  SetTransformableMarkerPose.h  SnapFootPrint.h  SnapFootPrintInput.h
merlion_control/arduino/libraries/ros_lib/jsk_recognition_msgs/: Label.h  LabelArray.h  Object.h  ObjectArray.h  PeoplePose.h  PeoplePoseArray.h  Segment.h  SegmentArray.h  (+2 more)
merlion_control/src/: control_driver.cpp  joy_driver.cpp  rotate_img.cpp
merlion_perception/: CMakeLists.txt  package.xml
merlion_perception/launch/: c920.launch  flare_detector.launch  gate_thresholder.launch
merlion_perception/nodes/: detect_bucket.py  detect_gate.py  detector.py  detector_sim.py  localizer.py  localizer_sim.py  mission_planner.py  overwatch.py  predict_height.py  test.py  tf_broadcaster.py  tiles.py
merlion_perception/src/: flare_detector.cpp  gate_thresholder.cpp
merlion_scripts/: CMakeLists.txt  package.xml
merlion_scripts/configs/: adaptive_threshold.yaml  background_extract.yaml  histogram.yaml  line_detection.yaml  opencv.yaml
merlion_scripts/launch/: video_recorder.launch
merlion_scripts/nodes/: image_fix.py  mission1.py  mission_planner.py
merlion_scripts/src/: adaptive_threshold.cpp  background_extract.cpp  bricktiles_seg.cpp  color_hist.cpp  convert_to_mp4.cpp  line_detection.cpp  manual_background_extract.cpp
merlion_setup/: CMakeLists.txt  README.md  package.xml
merlion_setup/camera_calibration/: logitech_c310.yaml  logitech_c920.yaml
merlion_setup/doc_images/: team_2.jpg.crdownload
merlion_setup/pixhawk/: pixhack_calib.params
merlion_setup/udev_rules/: 10-px4.rules  98-rgb-cams.rules  99-rgb-cams.rules
merlion_vision/: CMakeLists.txt  package.xml
(+19 files in other folders)
