<package>
  <name>merlion_bringup</name>
  <version>0.0.0</version>
  <description>Bring up package for Merlion</description>
  <author email="phamngtuananh@gmail.com">Tuan Anh</author>
  <license>BSD</license>
  <maintainer email="phamngtuananh@gmail.com">Tuan Anh</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>usb_cam</run_depend>

</package>
