<package>
  <name>merlion_setup</name>
  <version>0.0.0</version>
  <description>Setup package for Merlion</description>
  <author email="phamngtuananh@gmail.com">Tuan Anh</author>
  <license>BSD</license>
  <maintainer email="phamngtuananh@gmail.com">Tuan Anh</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
